fixed spacing for div

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,6 @@ a {
 
 }
 div {
-    padding: 25px 75px 25px 75px; 
+    padding: 10px 75px 10px 75px; 
 }
 
